@@ -93,6 +93,8 @@ Version 2.7
   (3) In the "Edit timer" menu, when on the "Day" item, the '0' key toggles between
       a single shot and a repeating timer. If "Day" indicates a repeating timer,
       the keys '1'...'7' can be used to toggle the individual days ('1' is Monday).
+      In the "Timers" menu the '0' key toggles between showing all timers and only
+      the active ones.
 
 * Navigating through the On Screen Menus
 
