@@ -10143,3 +10143,5 @@ Video Disk Recorder Revision History
 - Fixed cPoller::Poll() to allow negative timeout values again.
 - When regenerating the index of a recording, PID changes are now taken into account
   (reported by Christoph Haubrich).
+- In the "Timers" menu the '0' key now toggles between showing all timers and only
+  the active ones (thanks to Matthias Senzel).
